[project]
name = "planetae-orm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Edmilson Monteiro Rodrigues Neto", email = "edmilson.rodriguesn38@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "aioodbc>=0.5.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "mariadb>=1.1.11",
    "motor>=3.6.0",
]

[project.scripts]
lint = "src.tools.lint:lint_and_format"
test = "src.tools.test:test"
docs = "src.tools.docs:build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
]
tests = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "tox>=4.23.2",
]
docs = [
    "autodoc>=0.5.0",
    "sphinx>=8.1.3",
]

[tool.ruff]
line-length = 79

target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.hatch.build.targets.wheel]
include = ["src/planetae_orm/**"]

[tool.hatch.build.targets.sdist]
include = ["src/planetae_orm/**"]

[tool.hatch.metadata]
root = "src"
